# human-or-bot

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.bat  run.sh
.superpowers/sdd/: progress.md
cli/: main.py
docs/: architecture-changelog.md  architecture.md  requirements-changelog.md  requirements.md
docs/superpowers/plans/: 2026-06-25-npc-robot.md  2026-06-26-langsmith-integration.md  2026-06-26-npc-behavior-overhaul.md
docs/superpowers/specs/: 2026-06-25-npc-robot-design.md  2026-06-26-frontend-backend-separation-design.md  2026-06-26-langsmith-design.md  2026-06-26-npc-behavior-overhaul-design.md  2026-06-26-simplified-npc-flow-design.md
game/: review.py  session.py
npc/: graph.py  profile.py  prompts.py
npc/nodes/: respond.py  think.py
reference/: langchain_user_guide.md  langgraph_user_guide.md
tests/: conftest.py  test_langsmith_config.py
tests/game/: test_review.py  test_session.py
tests/npc/: test_graph.py  test_profile.py  test_prompts.py
